
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
CMAKE_POLICY(SET CMP0007 NEW)

SET(LIBRARY_NAME    ucdm)

PROJECT(${LIBRARY_NAME} C)

SET(PROJECT_DESCRIPTION     "Simple Unified Configuration and Data Manager (UCDM) library for embedded systems")
SET(PROJECT_AUTHOR_NAME     "Chintalagiri Shashank")
SET(PROJECT_AUTHOR_EMAIL    "shashank.chintalagiri@gmail.com")
SET(PROJECT_LICENSE         "GPLv3")
SET(PROJECT_VERSION_MAJOR   1)
SET(PROJECT_VERSION_MINOR   1)
SET(PROJECT_VERSION_PATCH   0)
SET(PROJECT_VERSION_TWEAK   0)

FIND_PACKAGE("ds" REQUIRED)

INCLUDE(ebs/lib-conf)

FILE(GLOB_RECURSE SOURCES *.c)
FILE(GLOB_RECURSE HEADERS *.h)

ADD_PLATFORM_LIBRARY(ucdm STATIC "ds" ${SOURCES})

IF(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
    INSTALL_PLATFORM_LIBRARY(ucdm ${HEADERS})
    INCLUDE(ebs/lib-doc)
ENDIF()
